# style-classification

./: README.md  pyproject.toml
src/style_classication/: create_json_from_s3.py  create_random_json.py
src/style_classification/: config.py  create_json_from_s3.py  reference_images_json.py
